--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="images/logo.png" />
-  <title>Jackson Writing Center – Drawbot</title>
+  <title>Jackson Writing Center</title>
 
   <!-- ========== CSS ========== -->
   <style>
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background: #EB8F3F;
+      background: #FFD6B2;
     }
 
     nav {
@@ -147,7 +147,7 @@
         <textarea id="messageInput" placeholder="Type what you want the drawbot to write..."></textarea>
         <div class="button" onclick="goToConfirm()">Continue</div>
       </div>
-      
+
     </div>
 
   </section>
